--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -41,6 +41,7 @@ body {
     padding: 14px;
     text-shadow: 0 1px 0 #FFF;
     font-weight: normal;
+    border-color: transparent;
     font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
   }
   h2 {
@@ -49,6 +50,7 @@ body {
     margin: 0;
     padding: 15px 0;
     line-height: 30px;
+    border-color: transparent;
   }
   .alert-error {
     font-size: 0.9em;
