--- a/src/main/webapp/body.css
+++ b/src/main/webapp/body.css
@@ -1,13 +1,11 @@
-body { 
+/* Do NOT place application styling in this file.
+   This should be only used for UI Styleguide */
+
+body {
   background-color: #fff;
   font-family: Arial, sans-serif;
 }
 
 .content h2 {
   color: #17888F;
-}
-
-.page-content {
-  margin: 12px 12px 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
 }
