--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -10,6 +10,15 @@
 
 $heading-green: #17888F !default;
 
+.page {
+  margin: 12px 12px 0px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
+  outline: 1px solid #e6e6e6;
+  outline-offset: -7px;
+  background: #fff;
+  padding: 15px 20px 40px;
+}
+
 .home-background {
   background: url(../images/home-glow.png) no-repeat center -70px, #d6d6d6 url(../images/home-bg.png) no-repeat right 530px;
 }
@@ -78,13 +87,6 @@ $heading-green: #17888F !default;
   font-weight: bold;
   color: #555;
   text-shadow: 0 1px 0 #FFF;
-}
-
-.app-form {
-  padding: 10px;
-  border: 1px solid #e6e6e6;
-  @include box-shadow(inset 1px 1px 0 white);
-  background: #FFF;
 }
 
 .form-row {
