--- a/src/main/webapp/public/scss/dashboard.scss
+++ b/src/main/webapp/public/scss/dashboard.scss
@@ -817,7 +817,7 @@ Accordions
 
 .carousel-play-control{
   button{
-    padding: 2px 15px;
+    padding: 0.5em 1em;
   }
   margin-bottom: 5px;
   text-align: center;
