--- a/src/main/webapp/public/scss/style.scss
+++ b/src/main/webapp/public/scss/style.scss
@@ -956,7 +956,7 @@ ul.messages li .message {
 .quick-button {
 	border: 1px solid #ddd;
 	margin-bottom: -1px;
-  	padding: 30px 0px 10px 0px;
+  	padding: 0.5em 1em;
 	font-size: 14px;
   	background-color: #fafafa;
   	background-image: -moz-linear-gradient(top, #fafafa, #efefef);
@@ -1018,7 +1018,7 @@ ul.messages li .message {
 
 .quick-button-small {
 	border: 1px solid #ddd;
-  	padding: 15px 0px 0px 0px;
+  	padding: 0.5ex 1em;
 	font-size: 10px;
   	background-color: #fafafa;
   	background-image: -moz-linear-gradient(top, #fafafa, #efefef);
