--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -8,6 +8,10 @@
  * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
  */
 
+$button-green: #356b6f;
+$button-red: #da4f49;
+$button-gray: #666666;
+
 body {
   background-color: #808080;
   font-family: Arial, sans-serif;
@@ -25,7 +29,7 @@ body {
 //bootstrap overrides: buttons
 
 .btn-group.open .btn-primary.dropdown-toggle {
-  background-color: #356b6f;
+  background-color: $button-green;
 }
 
 input[type="text"]::-ms-clear {
@@ -205,14 +209,14 @@ Styleguide 1.3
 input, a {
   &.btn-primary {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
-    background-color: #356b6f;
-    background-image: -moz-linear-gradient(top, #42a7ad, #356b6f);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#42a7ad), to(#356b6f));
-    background-image: -webkit-linear-gradient(top, #42a7ad, #356b6f);
-    background-image: -o-linear-gradient(top, #42a7ad, #356b6f);
-    background-image: linear-gradient(to bottom, #42a7ad, #356b6f);
+    background-color: $button-green;
+    background-image: -moz-linear-gradient(top, #42a7ad, $button-green);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#42a7ad), to($button-green));
+    background-image: -webkit-linear-gradient(top, #42a7ad, $button-green);
+    background-image: -o-linear-gradient(top, #42a7ad, $button-green);
+    background-image: linear-gradient(to bottom, #42a7ad, $button-green);
     background-repeat: repeat-x;
-    border-color: #42a7ad #42a7ad #356b6f;
+    border-color: #42a7ad #42a7ad $button-green;
     border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff42a7ad', endColorstr='#ff004484', GradientType=0);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
@@ -224,20 +228,19 @@ input, a {
   &.btn-primary.disabled,
   &.btn-primary[disabled] {
     color: #ffffff;
-    background-color: #356b6f;
+    background-color: $button-green;
   }
 
   &.btn-cancel {
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
     color: #FFFFFF;
-    background-color: #666666;
+    background-color: $button-gray;
     background-image: -moz-linear-gradient(top, #c5c5c5, #777777);
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#c5c5c5), to(#777777));
     background-image: -webkit-linear-gradient(top, #c5c5c5, #777777);
     background-image: -o-linear-gradient(top, #c5c5c5, #777777);
     background-image: linear-gradient(to bottom, #c5c5c5, #777777);
     background-repeat: repeat-x;
-    border-color: #777777 #777777 #444444;
     border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc5c5c5', endColorstr='#ff777777', GradientType=0);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
