--- a/src/main/webapp/public/common/form-toolbar.scss
+++ b/src/main/webapp/public/common/form-toolbar.scss
@@ -27,8 +27,8 @@ $heading-green: #17888F !default;
     margin-top: 4px;
   }
   .submit-button {
-    float: left;
-    margin-left: 10px;
+    float: right;
+    margin-right: 10px;
     margin-top: 4px;
   }
   .delete-button {
