Styleguide builds to build/styleguide
Got the styleguide to (mostly) correctly buid, by updating source paths.
While doing this I:
- Removed non-bower font-awesome fonts
- Removed non-used flat icons and dashboard
- Moved overview.md to top-level
- Took unit tests out of build

--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -1756,11 +1756,11 @@ input[placeholder].placeholder {
 }
 
 #viewReqList, #approveReqList {
-  .ngRow.odd:hover, .ui-grid-row:hover, .ngRow.odd:hover + .ngRow.odd, {
+  .ngRow.odd:hover, .ui-grid-row:hover {
     background-color: #bdd0cb;
     cursor: pointer;
   }
-  .ngRow.even:hover, .ngRow.even:hover + .ngRow.even {
+  .ngRow.even:hover {
     background-color: #bdd0cb;
   }
   .ngCellText {
