--- a/src/main/webapp/public/common/form-toolbar.scss
+++ b/src/main/webapp/public/common/form-toolbar.scss
@@ -26,22 +26,7 @@ $heading-green: #17888F !default;
     margin-left: 10px;
     margin-top: 4px;
   }
-  .submit-button {
-    float: right;
-    margin-right: 10px;
-    margin-top: 4px;
-  }
-  .delete-button {
-    float: right;
-    margin-right: 10px;
-    margin-top: 4px;
-  }
-  .enable-button {
-    float: right;
-    margin-right: 10px;
-    margin-top: 4px;
-  }
-  .comments-button {
+  .primary-action {
     float: right;
     margin-right: 10px;
     margin-top: 4px;
