--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -77,6 +77,8 @@ body {
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
       margin-bottom: 12px;
       &.btn-primary {
+        float: right;
+        margin-right: 18px;
         background-color: $button-green;
         background-image: -moz-linear-gradient(top, #42a7ad, $button-green);
         background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#42a7ad), to($button-green));
