--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -1,4 +1,6 @@
+//Colors
+
 $heading-green: #17888F !default;
-$button-green: #356b6f;
-$button-red: #da4f49;
-$button-gray: #666666;
+$green: #356b6f;
+$red: #da4f49;
+$gray: #666666;
