OLMIS-1163 FEOLMIS-337: Add background image to the mixin

--- a/src/main/webapp/public/common/button.mixins.scss
+++ b/src/main/webapp/public/common/button.mixins.scss
@@ -10,4 +10,5 @@
 
 @mixin button-color($color){
   background-color: $color;
+  background-image: linear-gradient(to bottom,  lighten($color, 15%), $color);
 }
