OLMIS-1128: Add compass image to 404 page

--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -46,6 +46,11 @@
       line-height: normal;
     }
   }
+  .fa-compass {
+    text-align: right;
+    font-size: 20em;
+    margin-right: 200px;
+  }
 }
 
 .innershadow {
