--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -1,67 +1,4 @@
 
-.page {
-  margin: 12px 12px 0px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
-  outline: 1px solid #e6e6e6;
-  outline-offset: -7px;
-  background: #fff;
-  padding: 15px 20px 40px;
-}
-
-.home-background {
-  background: url(../images/home-glow.png) no-repeat center -70px, #d6d6d6 url(../images/home-bg.png) no-repeat right 530px;
-}
-
-.home-content {
-  padding: 50px;
-  font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
-  color: #a0a0a0;
-  h2 {
-    font-size: 3em;
-    font-weight: normal;
-    color: #A0A0A0;
-  }
-  h3 {
-    font-size: 4.2em;
-    font-weight: normal;
-    line-height: 65px;
-    &.access-denied {
-      padding: 16px 0 16px 77px;
-      border: 1px solid #aaa;
-      border-radius: 4px;
-      background: #FFF url('../images/warning.png') no-repeat 14px center;
-      font-size: 2em;
-      color: #6f6f6f;
-      text-shadow: 0 1px 0 #FFF;
-      line-height: normal;
-    }
-  }
-  .fa-compass {
-    text-align: right;
-    font-size: 20em;
-    margin-right: 200px;
-  }
-}
-
-.innershadow {
-  position: relative;
-  &:before, &:after {
-    width: 100%;
-    position: absolute;
-    content: attr(title);
-    opacity: 0.2;
-    color: rgba(255, 255, 255, 1);
-  }
-  &:before {
-    top: 1px;
-    left: -1px;
-  }
-  &:after {
-    top: 2px;
-    left: 0;
-  }
-}
-
 /* TODO: Split into separate screen */
 /* RnR Template config */
 .rnr-template-head {
@@ -534,7 +471,7 @@ span[class^="tpl-"] {
   }
 
   .rnr-form-error:after {
-    @include square(0px);
+    @include size(0px);
     position: absolute;
     bottom: -5px;
     right: 12%;
@@ -564,7 +501,7 @@ span[class^="tpl-"] {
     z-index: 1;
 
     &:after {
-      @include square(0px);
+      @include size(0px);
       position: absolute;
       bottom: -6px;
       left: 12px;
@@ -576,7 +513,7 @@ span[class^="tpl-"] {
     }
 
     &:before {
-      @include square(0px);
+      @include size(0px);
       position: absolute;
       bottom: -7px;
       left: 11px;
@@ -884,7 +821,7 @@ table td.cell-input .display-block, .display-block {
     color: #444;
   }
   .close-btn {
-    @include square(16px);
+    @include size(16px);
     position: absolute;
     top: 10px;
     right: 11px;
@@ -1350,7 +1287,7 @@ table td.delete-button {
   line-height: 13px;
   color: #CF2323;
   .beak-down {
-    @include square(0px);
+    @include size(0px);
     position: absolute;
     bottom: -9px;
     left: 46%;
@@ -1484,7 +1421,7 @@ table td.delete-button {
     }
   }
   .clear-search {
-    @include square(20px);
+    @include size(20px);
     display: block;
     position: absolute;
     top: 4px;
@@ -1719,7 +1656,7 @@ td .close {
 }
 
 .loader-icon {
-  @include square(100%);
+  @include size(100%);
   position: fixed;
   top: 0;
   left: 0;
@@ -2626,7 +2563,7 @@ div.input-div[disabled] {
 }
 
 .searchAndFilter:after, .slider-beak:after {
-  @include square(0px);
+  @include size(0px);
   position: absolute;
   border-bottom: 16px solid white;
   border-left: 12px solid transparent;
@@ -2638,7 +2575,7 @@ div.input-div[disabled] {
 }
 
 .searchAndFilter:before, .slider-beak:before {
-  @include square(0px);
+  @include size(0px);
   position: absolute;
   border-bottom: 17px solid #bbb;
   border-left: 13px solid transparent;
@@ -2923,7 +2860,7 @@ input[type="checkbox"].facilityCheckbox {
     color: #444;
   }
   .close-btn {
-    @include square(16px);
+    @include size(16px);
     position: absolute;
     top: 10px;
     right: 11px;
