OLMIS-1128: Updated 404 page css layout

--- a/src/main/webapp/public/common/page-hero.scss
+++ b/src/main/webapp/public/common/page-hero.scss
@@ -28,10 +28,14 @@
 
 @media(min-width: $screen-sm-min){
 	.page-hero{
-		width: $screen-sm-min - 100px;
 		padding: 50px;
+		> * {
+			display: block;
+			width: $screen-sm-min - 100px; 
+		}
 		h2 em{
 			display: block;
+			font-size: 0.9em;
 		}
 	}
 }
