--- a/src/main/webapp/public/common/button.mixins.scss
+++ b/src/main/webapp/public/common/button.mixins.scss
@@ -8,7 +8,17 @@
  * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
  */
 
+@import 'bourbon';
+
 @mixin button-color($color){
-  background-color: $color;
-  background-image: linear-gradient(to bottom,  lighten($color, 15%), $color);
+  color: $white;
+  @include linear-gradient(to bottom,  lighten($color, 15%), lighten($color, 10%) 10%, $color);
+  &:hover,
+  &:active,
+  &.active,
+  &.disabled,
+  &[disabled] {
+  	color: $white;
+    background: $color;
+  }
 }
