--- a/src/main/webapp/public/common/buttons.scss
+++ b/src/main/webapp/public/common/buttons.scss
@@ -31,46 +31,25 @@ markup:
 Styleguide 1.3
 */
 
+.button{
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
+  @include button-color($gray);
+  padding: 0.5em 1em;
+  line-height: 1em;
+  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+ }
+
 input, a {
+  &.btn-default {
+    @extend .button;
+  }
+
   &.btn-primary {
     @include button-color($green);
-    padding: 0.5em 1em;
-    line-height: 1em;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
-    background-repeat: repeat-x;
-    border-color: #42a7ad #42a7ad $green;
-    border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff42a7ad', endColorstr='#ff004484', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
   }
 
-  &.btn-primary:hover,
-  &.btn-primary:active,
-  &.btn-primary.active,
-  &.btn-primary.disabled,
-  &.btn-primary[disabled] {
-    color: #ffffff;
-    @include button-color($green);
-  }
-
-  &.btn-default {
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
-    color: #FFFFFF;
-    @include button-color($gray);
-    padding: 0.5em 1em;
-    line-height: 1em;
-    background-repeat: repeat-x;
-    border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc5c5c5', endColorstr='#ff777777', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-  }
-
-  &.btn-default:hover,
-  &.btn-default:active,
-  &.btn-default.active,
-  &.btn-default.disabled,
-  &.btn-default[disabled] {
-    color: #ffffff;
-    @include button-color(#777777);
+  &.delete-button{
+    @extend .button;
+    @include button-color($red);
   }
 }
