--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -8,20 +8,10 @@
  * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
  */
 
-html {
-  height: 100%;
-}
-
 body {
   background-color: $gray;
   font-family: Arial, sans-serif;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.flex-stretch {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
@@ -31,18 +21,10 @@ body {
   src: url('../fonts/HelveticaNeue-CondensedBold.woff') format('woff'); /* Modern Browsers */
 }
 
-#wrap {
-  min-width: 960px;
-}
-
 //bootstrap overrides: buttons
 
 .btn-group.open .btn-primary.dropdown-toggle {
   background-color: $green;
-}
-
-input[type="text"]::-ms-clear {
-  display: none;
 }
 
 a {
@@ -56,8 +38,17 @@ textarea {
   resize: none;
 }
 
+input[type="text"]::-ms-clear {
+  display: none;
+}
+
+
 input[type='file'] {
   line-height: normal;
+}
+
+input[type='text'] {
+  outline: 0 none !important;
 }
 
 textarea:focus,
@@ -112,67 +103,12 @@ select {
   text-align: left;
 }
 
-.right-justified {
-  text-align: right !important;
+.row-fluid [class*="span"] {
+  word-wrap: break-word;
 }
 
-.center-justified {
-  text-align: center !important;
-}
-
-.vertical-middle-aligned {
-  vertical-align: middle !important;
-}
-
-label.short {
-  display: inline;
-}
-
-.position-relative {
-  position: relative;
-}
-
-.clear-floats {
-  float: none !important;
-}
-
-.full-width {
-  width: 100% !important;
-}
-
-.half-width {
-  width: 50% !important;
-}
-
-.submenu li.border-top-none {
-  border-top: none;
-}
-
-.warning-popup {
-  width: 250px;
-  position: absolute;
-  border-radius: 4px;
-  left: -132px;
-  padding: 7px 9px;
-  bottom: 25px;
-  background: rgba(0, 0, 0, 0.7);
-  font-size: 0.8em;
-  text-align: center;
-  white-space: normal;
-  color: $white;
-  @include box-shadow(0 0 15px rgba(0, 0, 0, 0.5));
-  &:after {
-    height: 0;
-    width: 0;
-    border-top: 7px solid rgba(0, 0, 0, 0.7);
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 0;
-    position: absolute;
-    left: 132px;
-    bottom: -6px;
-    content: "";
-  }
+.number, td.number, th.number{
+  text-align: right;
 }
 
 /*
