--- a/src/main/webapp/public/common/layout.scss
+++ b/src/main/webapp/public/common/layout.scss
@@ -1,4 +1,8 @@
 
+html {
+  height: 100%;
+}
+
 body{
 	display: flex;
 	flex-direction: column;
@@ -24,4 +28,10 @@ body{
   outline-offset: -7px;
   background: $white;
   padding: 15px 20px 40px;
+}
+
+.flex-stretch {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
