--- a/src/main/webapp/public/requisitions/header.scss
+++ b/src/main/webapp/public/requisitions/header.scss
@@ -57,3 +57,47 @@
 	}
 }
 
+#requisition-head-block {
+  padding: 8px 0px 0px
+}
+
+.pull-left.requisition-head-block {
+  width: 90%;
+  margin-left: 0.4%;
+}
+
+@media screen and (min-width: 1024px) {
+  .pull-left.requisition-head-block {
+    width: 90.5%;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .pull-left.requisition-head-block {
+    width: 88%;
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .pull-left.requisition-head-block {
+    width: 87%;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .pull-left.requisition-head-block {
+    width: 86%;
+  }
+}
+
+@media screen and (min-width: 840px) {
+  .pull-left.requisition-head-block {
+    width: 84%;
+  }
+}
+
+@media screen and (min-width: 648px) {
+  .pull-left.requisition-head-block {
+    width: 82%;
+  }
+}
