OLMIS:1215: Removed hardcoded measurements from dashboard pages

--- a/src/main/webapp/public/dashboard/404.scss
+++ b/src/main/webapp/public/dashboard/404.scss
@@ -4,9 +4,9 @@
 	&::after{
 		font-family: FontAwesome;
 		content: "\f14e";
-		font-size: 200px;
+		font-size: 4.8em;
 		position: absolute;
-		bottom: 10px;
-		right: 100px;
+		bottom: 0.1em;
+		right: 0.4em;
 	}
 }
