--- a/src/main/webapp/public/dashboard/header.scss
+++ b/src/main/webapp/public/dashboard/header.scss
@@ -1,29 +1,29 @@
 @import 'bourbon';
 
 body>header>:first-child {
-  box-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
-  border-bottom: 1px solid $light-cyan;
+  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.6);
+  border-bottom: 0.1em solid $light-cyan;
   color: $dark-gray;
-  min-height: 66px;
+  min-height: 4.7em;
   position: relative;
   z-index: 3;
   @include linear-gradient(to top, $light-gray 0%, lighten($light-gray, 40%) 80%, $white 100%);
 }
 .logo {
-  padding: 8px 0 0;
+  padding: 0.6em 0 0;
   img {
     float: left;
-    margin: 0 0 0 10px;
+    margin: 0 0 0 0.8em;
   }
   h1 {
     float: left;
     font-size: 2em;
     font-weight: normal;
     font-family: 'HelveticaNeue-CondensedBold', Arial, sans-serif;
-    line-height: 29px;
-    margin: 10px 0 0 10px;
+    line-height: 1.1em;
+    margin: 0.35em 0 0 0.35em;
     color: $gray;
-    text-shadow: 0 1px 0 $white;
+    text-shadow: 0 0.05em 0 $white;
     border-color: transparent;
   }
 }
@@ -67,10 +67,10 @@ Styleguide 1.1
 
 h1, h2 {
   margin-top: 0;
-  border-bottom: 1px solid $light-gray;
+  border-bottom: 0.1em solid $light-gray;
   font-weight: normal;
   color: $heading-green;
-  line-height: 40px;
+  line-height: 2em;
 }
 
 h2 {
@@ -103,9 +103,9 @@ Styleguide 1.4
 
 .user-info {
   text-align: right;
-  padding: 24px 12px 0 0;
+  padding: 2em 1em 0 0;
   font-size: 0.9em;
-  text-shadow: 0 1px 0 $white;
+  text-shadow: 0 0.1em 0 $white;
   a {
     text-decoration: underline;
   }
