--- a/src/main/webapp/public/dashboard/home.scss
+++ b/src/main/webapp/public/dashboard/home.scss
@@ -1,14 +1,14 @@
 
 .home-page{
   @extend .page-hero;
-  padding-bottom: 170px;
+  padding-bottom: 4em;
   &::after{
     content:"";
     width: 100%;
-    height: 136px; // image height
+    height: $image-height;
     position: absolute;
-    bottom: 24px;
-    left: 0px;
+    bottom: 0.5em;
+    left: 0em;
     background: url(dashboard/home-background.png) no-repeat right bottom;
   }
 }
