--- a/src/main/webapp/public/dashboard/navigation.scss
+++ b/src/main/webapp/public/dashboard/navigation.scss
@@ -86,10 +86,10 @@ header > .navbar {
   @extend .navbar-default;
 
   @include linear-gradient(to bottom, $heading-green 0%, $dark-heading-green 100%);
-  margin-bottom: 0px;
-  box-shadow: 2px 0 4px rgba(0, 0, 0, 0.4);
-  border-width: 0px;
-  border-radius: 0px;
+  margin-bottom: 0em;
+  box-shadow: 0.2em 0 0.4em rgba(0, 0, 0, 0.4);
+  border-width: 0em;
+  border-radius: 0em;
 
   padding: 0em 1em;
 
@@ -112,12 +112,12 @@ header > .navbar {
   }
 
   .navbar-right{
-    margin-right: 0px;
+    margin-right: 0em;
   }
 
   > .navbar-links{
     @extend .navbar-text;
-    margin-bottom: 0px;
+    margin-bottom: 0em;
     color: darken($white, 15%);
 
     a.selected{
@@ -158,17 +158,17 @@ header > .navbar {
         color: $white;
         font-weight: bold;
         text-decoration: none;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
-        padding: 7px 14px;
-        margin: 7px;
+        text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.4);
+        padding: 0.5em 1em;
+        margin: 0.5em;
       }
       &.open > a,
       &.open > a:hover,
       > a:hover {
         color: $white;
         background-color: $dark-cyan;
-        box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 3px;
+        box-shadow: inset 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.2);
+        border-radius: 0.3em;
       }
     }
   }
@@ -180,13 +180,13 @@ header > .navbar {
     &::before{
       content: "";
       position:absolute;
-      top: -5px;
-      left: 30px;
-      width: 0px; 
-      height: 0px; 
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
-      border-bottom: 5px solid $white;
+      top: -0.4em;
+      left: 2.2em;
+      width: 0em;
+      height: 0em;
+      border-left: 0.4em solid transparent;
+      border-right: 0.4em solid transparent;
+      border-bottom: 0.45em solid $white;
     }
 
     a {
