Fixed position of input in Loses And Adjustments modal

--- a/src/main/webapp/public/requisitions/product-grid/losses-and-adjustment.scss
+++ b/src/main/webapp/public/requisitions/product-grid/losses-and-adjustment.scss
@@ -20,6 +20,7 @@ max-height: 15em;
       .tpl-adjustment-qty {
         float: right;
         text-align: right;
+        margin-top: 0.5em;
         input {
           width: 70px;
           padding-right: 10px;
