--- a/src/main/webapp/public/requisitions/approval-list/approval-list.scss
+++ b/src/main/webapp/public/requisitions/approval-list/approval-list.scss
@@ -2,10 +2,10 @@
 
 	.grid {
 		width: 100%;
-		max-height: 1320px;
-		min-height: 333px;
-		margin-top: 10px;
-		border: 1px solid rgb(212, 212, 212);	
+		max-height: 100em;
+		min-height: 23em;
+		margin-top: 0.5em;
+		border: 0.1em solid rgb(212, 212, 212);
 	}
 	
 }
