--- a/src/main/webapp/public/requisitions/header.scss
+++ b/src/main/webapp/public/requisitions/header.scss
@@ -32,14 +32,14 @@
 	dl{
 		display: flex;
 		flex-grow: 1;
-		padding-top: 30px;
-		padding-bottom: 0px;
-		margin-left: 15px;
+		padding-top: 2.4em;
+		padding-bottom: 0;
+		margin-left: 1.2em;
 	}
 	dt{
 		display: block;
 		flex: 0 0 auto;
-		width: 0px;
+		width: 0;
 		position: relative;
 		top: -1.2em;
 		white-space: nowrap;
@@ -55,49 +55,4 @@
 			padding-right: 0em;
 		}
 	}
-}
-
-#requisition-head-block {
-  padding: 8px 0px 0px
-}
-
-.pull-left.requisition-head-block {
-  width: 90%;
-  margin-left: 0.4%;
-}
-
-@media screen and (min-width: 1024px) {
-  .pull-left.requisition-head-block {
-    width: 90.5%;
-  }
-}
-
-@media screen and (min-width: 1100px) {
-  .pull-left.requisition-head-block {
-    width: 88%;
-  }
-}
-
-@media screen and (min-width: 1020px) {
-  .pull-left.requisition-head-block {
-    width: 87%;
-  }
-}
-
-@media screen and (min-width: 960px) {
-  .pull-left.requisition-head-block {
-    width: 86%;
-  }
-}
-
-@media screen and (min-width: 840px) {
-  .pull-left.requisition-head-block {
-    width: 84%;
-  }
-}
-
-@media screen and (min-width: 648px) {
-  .pull-left.requisition-head-block {
-    width: 82%;
-  }
 }
