--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -52,9 +52,9 @@ body {
   }
   input:focus:required:invalid:focus {
     border-color: $heading-green;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 80px rgba(23, 136, 143, 0.6);
-    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 80px rgba(23, 136, 143, 0.6);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 80px rgba(23, 136, 143, 0.6);
+    -webkit-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+    -moz-box-shadow: inset 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+    box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
   }
   input {
     &[type='text'], &[type='password'] {
@@ -97,9 +97,9 @@ input[type="color"]:focus,
   outline: thin dotted  \9;
 /* IE6-9 */
 
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
+  -webkit-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+  -moz-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+  box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
 }
 
 .login-form {
