--- a/src/main/webapp/public/common/notification-modal.scss
+++ b/src/main/webapp/public/common/notification-modal.scss
@@ -8,8 +8,8 @@
 		&::before{
 			font-family: FontAwesome;
 			font-size: 2em;
-			padding-right: 7px;
-			line-height: 1em;
+			padding-right: 0.1em;
+			line-height: 0.7em;
 			float: left;
 		}
 		&.success::before{
