--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -84,9 +84,9 @@ input[type="color"]:focus,
   outline: thin dotted     \9;
   /* IE6-9 */
 
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(23, 136, 143, 0.6);
+  -webkit-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+  -moz-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+  box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
 }
 
 .dropdown-menu li > a:hover,
