--- a/src/main/webapp/public/common/buttons.scss
+++ b/src/main/webapp/public/common/buttons.scss
@@ -36,7 +36,7 @@ Styleguide 1.3
 */
 
 .button{
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
+  text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.7);
   @include button-color($gray);
   padding: 0.5em 1em;
   line-height: 1em;
