--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -1,67 +1,47 @@
 
 span[class^="tpl-"] {
   display: inline-block;
-  padding: 10px;
+  padding: 0.5em;
   vertical-align: text-top;
 }
 
 table .productCategory,
 .productCategory {
-  padding: 9px 12px 9px 9px;
   background-color: $cyan;
-  font-size: 12px;
-  line-height: 8px;
-  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+  font-size: 0.9em;
+  text-shadow: 0.1em 0.1em 0 rgba(0, 0, 0, 0.3);
   color: $white;
   .ngAggregateText {
-    left: 12px;
+    left: 0.9em;
   }
 }
 
 .info-box {
-  padding: 9px 12px 2px;
-  margin-bottom: 18px;
-  @include box-shadow(3px 3px 0 rgba(0, 0, 0, 0.2));
-  border: 1px solid $medium-gray;
+  margin-bottom: 1.4em;
+  @include box-shadow(0.2em 0.2em 0 rgba(0, 0, 0, 0.2));
+  border: 0.1em solid $medium-gray;
   background: $very-light-gray;
   font-size: 0.9em;
-  text-shadow: 0 1px 0 white;
-}
-
-.info-box > table td {
-  padding: 4px 20px 10px 0;
-}
-
-.button-row {
-  padding: 5px 0;
+  text-shadow: 0 0.1em 0 white;
 }
 
 .grid {
   @include size(400px 100%);
-  border: 1px solid rgb(212, 212, 212);
+  border: 0.1em solid rgb(212, 212, 212);
 }
 
 .grid-filters {
-  padding: 10px 0 20px;
+  padding: 0.7em 0 1.4em;
   text-align: right;
   .search-query {
-    width: 140px;
-    padding: 4px 6px;
+    width: 10em;
+    padding: 0.25em 4em;
     margin-top: 0;
-  }
-  select {
-    width: 170px;
-    margin: 0 0 0 8px;
-  }
-  #searchProduct {
-    width: 85%;
-    margin-right: 0px;
-    float: right;
   }
 }
 
 .grid-btn {
-  margin: 2px 10px;
+  margin: 0.2em 0.2em;
 }
 
 #viewReqList, #approveReqList {
@@ -80,7 +60,7 @@ table .productCategory,
   .ui-grid-cell {
     background: inherit !important;
     input[type="button"] {
-      border-radius: 4px;
+      border-radius: 0.2em;
       color: $white;
     }
   }
@@ -91,7 +71,7 @@ table .productCategory,
 }
 
 .padding2px {
-  padding: 2px;
+  padding: $padding2px;
 }
 
 .emergency:after {
@@ -127,8 +107,10 @@ table .productCategory,
 }
 
 table.search-list {
-  border: 1px solid $light-gray;
+  border: 0.1em solid $light-gray;
   border-left: 0;
+  position: relative;
+  margin: 0.8em 0;
 }
 
 .col-icon-ok {
@@ -138,7 +120,7 @@ table.search-list {
 
 .gradient-header {
   th {
-    min-width: 93px;
+    min-width: 7em;
     background: $very-light-gray;
     background: $very-light-gray; /* Old browsers */
     background: -moz-linear-gradient(top, $very-light-gray 0%, $light-gray 100%); /* FF3.6+ */
@@ -150,7 +132,7 @@ table.search-list {
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$very-light-gray', endColorstr='$light-gray', GradientType=0); /* IE6-9 */
     font-size: 0.9em;
     font-weight: bold;
-    text-shadow: 0 1px 0 $white;
+    text-shadow: 0 0.1em 0 $white;
     color: $dark-gray;
   }
 }
