--- a/src/main/webapp/public/common/filters.scss
+++ b/src/main/webapp/public/common/filters.scss
@@ -10,20 +10,20 @@
 	}
 
 	input {
-		border-right: 0px;
-		border-left: 0px;
+		border-right: 0;
+		border-left: 0;
 	}
 
 	> * {
-		border-radius: 0px !important;
+		border-radius: 0 !important;
 	}
 
 	:first-child {
-		border-radius: 4px 0px 0px 4px !important;
+		border-radius: 0.3em 0 0 0.3em !important;
 	}
 
 	:last-child {
-		border-radius: 0px 4px 4px 0px !important;
+		border-radius: 0 0.3em 0.3em 0 !important;
 	}
 
 }
