--- a/src/main/webapp/public/common/form-toolbar.scss
+++ b/src/main/webapp/public/common/form-toolbar.scss
@@ -8,201 +8,26 @@
  * You should have received a copy of the GNU Affero General Public License along with this program.  If not, see http://www.gnu.org/licenses.  For additional information contact info$OpenLMIS.org. 
  */
 
-//Buttons
+//Toolbar with buttons
 
 .action-buttons {
   background: rgba(0, 0, 0, 0.7);
   position: fixed;
   bottom: 0;
   width: 100%;
-  min-height: 50px;
+  min-height: 3.6em;
   z-index: 15;
   .delete-button {
-    margin-left: 10px;
-    margin-top: 4px;
+    margin-left: 0.7em;
+    margin-top: 0.7em;
   }
   .save-button {
-    margin-left: 10px;
-    margin-top: 4px;
+    margin-left: 0.7em;
+    margin-top: 0.7em;
    }
   .primary-action {
     float: right;
-    margin-right: 10px;
-    margin-top: 4px;
+    margin-right: 0.7em;
+    margin-top: 0.7em;
   }
-  .total-cost-container {
-    position: absolute;
-    width: 100%;
-    top: -38px;
-    .cost-values {
-      background: $light-cyan;
-      text-align: right;
-      font-size: 1.1em;
-      border: 1px solid $light-cyan;
-      color: $dark-cyan;
-      text-shadow: 0 1px 0 white;
-      height: 20px;
-      padding: 6px 8px;
-      margin: 0 14px;
-    }
-    .comments-popup {
-      width: 190px;
-      bottom: 96px;
-      text-align: left;
-      color: $gray;
-      h4 {
-        border-bottom: none;
-        font-size: 1em;
-        color: $dark-cyan;
-      }
-      small {
-        div {
-          padding: 5px 0;
-          border-bottom: 1px solid $medium-gray;
-          &:last-child {
-            border-bottom: none;
-          }
-        }
-      }
-      .beak-down {
-        right: 16px;
-        bottom: -10px;
-      }
-    }
-    .list-icon-container {
-      padding: 3px 4px;
-      text-shadow: none;
-    }
-    .is-icon-ul-selected {
-      font-size: 1em;
-      border-radius: 3px;
-      background: $dark-cyan;
-      color: white;
-    }
-  }
-}
-
-#dividedCost {
-  &:hover {
-    font-size: 1em;
-    border-radius: 3px;
-    background: $dark-cyan;
-    color: white;
-    cursor: pointer;
-  }
-}
-
-//Messages
-
-.toolbar-success,
-.toolbar-error {
-  font-weight: bold;
-  float: left;
-  padding: 0px 0px 10px 10px;
-}
-
-.toolbar-success {
-  color: $green;
-}
-
-.toolbar-error {
-  color: $red;
-}
-
-//Comments
-
-.comments-popup {
-  background: $very-light-gray;
-  padding: 5px 15px 10px;
-  position: fixed;
-  bottom: 54px;
-  right: 19px;
-  border: 1px solid $medium-gray;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-  border-radius: 6px;
-  width: 280px;
-  &.view {
-    padding-bottom: 30px;
-  }
-  h4 {
-    color: $heading-green;
-    font-size: 1.15em;
-    border-bottom: 1px solid $medium-gray;
-    padding-bottom: 5px;
-    margin: 5px 0 0;
-  }
-  .comments-list {
-    max-height: 210px;
-    overflow: auto;
-    margin: 0;
-    padding: 0;
-    font-size: 0.85em;
-    word-wrap: break-word;
-    li {
-      border-bottom: 1px solid $light-gray;
-      padding: 10px 0;
-      line-height: 18px;
-      .comment-info {
-        font-size: .90em;
-        .comment-date {
-          color: $medium-gray;
-        }
-      }
-    }
-  }
-  textarea {
-    margin-top: 10px;
-    width: 95%;
-    border-radius: 0;
-    height: 50px;
-    font-size: 0.85em;
-    line-height: 15px;
-  }
-  .link-minimize {
-    display: inline-block;
-    padding: 0 0 0 6px;
-    color: $medium-gray;
-    line-height: 18px;
-    float: right;
-    &:hover {
-      text-decoration: none;
-      .icon-remove {
-        color: $gray;
-      }
-    }
-  }
-  .beak-down {
-    display: inline-block;
-    border: 11px solid $very-light-gray;
-    border-bottom: 0;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    position: absolute;
-    right: 23px;
-    bottom: -11px;
-  }
-  .comment-length {
-    color: $medium-gray;
-    font-size: 0.9em;
-  }
-}
-
-.toolbar-loader {
-  color: $white;
-  font-weight: bold;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  text-indent: 15px;
-  line-height: 47px;
-}
-
-.budget-exceeds-detailed {
-  float: left;
-  color: $orange;
-  text-shadow: none;
 }
