--- a/src/main/webapp/public/common/mixins.scss
+++ b/src/main/webapp/public/common/mixins.scss
@@ -33,19 +33,19 @@
 @mixin right-arrow($color){
   position: relative;
   background: $color;
-  padding:25px 15px;
+  padding: 2em 1.2em;
   text-align: center;
-  font-weight:bold;
-  min-width:50px;
-  margin-right: 15px;
+  font-weight: bold;
+  min-width: 6em;
+  margin-right: 1.2em;
   text-shadow: none;
 }
 @mixin right-arrow-after($color){
   border-color: rgba(136, 183, 213, 0);
   border-left-color: $color;
-  border-width: 35px 0 35px 15px;
+  border-width: 2.7em 0 2.7em 1.2em;
   top: 50%;
-  margin-top: -35px;
+  margin-top: -2.7em;
 }
 @mixin right-arrow-after-before(){
   left: 100%;
