--- a/src/main/webapp/public/dashboard/navigation.scss
+++ b/src/main/webapp/public/dashboard/navigation.scss
@@ -85,7 +85,7 @@ header > .navbar {
   @include clearfix();
   @extend .navbar-default;
 
-  @include linear-gradient(to bottom, $heading-green 0%, $dark-heading-green 100%);
+  @include linear-gradient(to bottom, $heading-green 0%, darken($heading-green, 10%) 100%);
   margin-bottom: 0em;
   box-shadow: 0.2em 0 0.4em rgba(0, 0, 0, 0.4);
   border-width: 0em;
@@ -166,7 +166,7 @@ header > .navbar {
       &.open > a:hover,
       > a:hover {
         color: $white;
-        background-color: $dark-cyan;
+        background-color: darken($cyan, 25%);
         box-shadow: inset 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.2);
         border-radius: 0.3em;
       }
