--- a/src/main/webapp/public/requisitions/product-grid/losses-and-adjustment.scss
+++ b/src/main/webapp/public/requisitions/product-grid/losses-and-adjustment.scss
@@ -46,7 +46,7 @@ max-height: 15em;
   padding: 0.6em 2.5em 0.6em 0.6em;
   margin: 0.5em 0 0;
   border-radius: 0;
-  border-color: $orange;
+  border-color: $red;
   font-size: 1.2em;
   font-weight: bold;
   text-align: right;
