OLMIS-1224: Remade Convert to Order page to be a view with static table supporting history tracking

--- a/src/main/webapp/public/requisitions/convert-to-order/convert-to-order-list.scss
+++ b/src/main/webapp/public/requisitions/convert-to-order/convert-to-order-list.scss
@@ -32,8 +32,21 @@
 			@extend .alert-info;
 		}
 
-		.grid {
-			width: 100%;
+		table {
+			@extend .table;
+			@extend .table-bordered;
+
+			thead > tr {
+				@extend .gradient-header;
+
+				& > th {
+					min-width: 0 !important;
+				}
+			}
+
+			th, td {
+				vertical-align: middle !important;
+			}
 		}
 	}
 
