OLMIS-1220: disable status multiselect in requisituion view and refactor datepicker directive

--- a/src/main/webapp/public/common/datepicker.scss
+++ b/src/main/webapp/public/common/datepicker.scss
@@ -1,3 +1,10 @@
-.olmis-datepicker {
-	width: 10.5em;
+.olmis-datepicker { 
+    position: relative; 
+}
+
+.olmis-datepicker-icon {
+  	position: absolute;
+  	padding: 10px;
+  	pointer-events: none;
+  	right: 0px;
 }
