OLMIS-1167 Unified select width, can set default value
using attribute default-value can set default option, width of select element is now set to 250px

--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -33,6 +33,7 @@ table .productCategory,
 .grid-filters {
   padding: 0.7em 0 1.4em;
   text-align: right;
+  display: flex;
   .search-query {
     width: 10em;
     padding: 0.25em 4em;
