--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -22,6 +22,7 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-right:0 !important;
 }
 
 @font-face {
@@ -113,6 +114,10 @@ select {
 
 .modal-footer {
   text-align: left;
+}
+
+.modal-open {
+  overflow:auto !important;
 }
 
 .row-fluid [class*="span"] {
