--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -48,9 +48,7 @@ body {
   }
   input:focus:required:invalid:focus {
     border-color: $heading-green;
-    -webkit-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
-    -moz-box-shadow: inset 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
-    box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+    box-shadow: inset 0 0.1em 0.1em rgba($black, 0.075), 0 0 0.5em rgba($cyan, 0.6);
   }
   input {
     &[type='text'], &[type='password'] {
@@ -91,11 +89,7 @@ input[type="color"]:focus,
   border-color: $heading-green;
   outline: 0;
   outline: thin dotted  \9;
-/* IE6-9 */
-
-  -webkit-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
-  -moz-box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
-  box-shadow: inset 0 0.1em 0.1em rgba(0, 0, 0, 0.075), 0 0 0.5em rgba(23, 136, 143, 0.6);
+  box-shadow: inset 0 0.1em 0.1em rgba($black, 0.075), 0 0 0.5em rgba($cyan, 0.6);
 }
 
 .login-form {
