OLMIS-1215: Refactor of transparent colors - after review fixes

--- a/src/main/webapp/public/common/page-hero.scss
+++ b/src/main/webapp/public/common/page-hero.scss
@@ -46,7 +46,7 @@
     position: absolute;
     content: attr(title);
     opacity: 0.2;
-    color: rgba(255, 255, 255, 1);
+    color: rgba($white, 1);
   }
   &:before {
     top: 0.1em;
