--- a/src/main/webapp/public/dashboard/home.scss
+++ b/src/main/webapp/public/dashboard/home.scss
@@ -5,7 +5,7 @@
   &::after{
     content:"";
     width: 100%;
-    height: $image-height;
+    height: 136px;
     position: absolute;
     bottom: 0.5em;
     left: 0em;
