--- a/src/main/webapp/public/common/buttons.scss
+++ b/src/main/webapp/public/common/buttons.scss
@@ -36,11 +36,11 @@ Styleguide 1.3
 */
 
 .button{
-  text-shadow: 0.1em 0.1em 0.1em rgba(0, 0, 0, 0.7);
+  text-shadow: 0.1em 0.1em 0.1em rgba($black, 0.7);
   @include button-color($gray);
   padding: 0.5em 1em;
   line-height: 1em;
-  border-color: rgba(255, 255, 255, 0.3) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  border-color: rgba($white, 0.3) rgba($black, 0.1) rgba($black, 0.25);
  }
 
 input, a {
