--- a/src/main/webapp/public/common/content.scss
+++ b/src/main/webapp/public/common/content.scss
@@ -9,7 +9,7 @@ table .productCategory,
 .productCategory {
   background-color: $cyan;
   font-size: 0.9em;
-  text-shadow: 0.1em 0.1em 0 rgba(0, 0, 0, 0.3);
+  text-shadow: 0.1em 0.1em 0 rgba($black, 0.3);
   color: $white;
   .ngAggregateText {
     left: 0.9em;
@@ -18,7 +18,7 @@ table .productCategory,
 
 .info-box {
   margin-bottom: 1.4em;
-  @include box-shadow(0.2em 0.2em 0 rgba(0, 0, 0, 0.2));
+  @include box-shadow(0.2em 0.2em 0 rgba($black, 0.2));
   border: 0.1em solid $medium-gray;
   background: $very-light-gray;
   font-size: 0.9em;
