--- a/src/main/webapp/public/common/layout.scss
+++ b/src/main/webapp/public/common/layout.scss
@@ -23,7 +23,7 @@ body{
 .page {
   flex-grow: 0;
   margin: 0.9em 0.9em 0;
-  box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 0.5em rgba($black, 0.6);
   outline: 0.1em solid $light-gray;
   outline-offset: -0.5em;
   background: $white;
