--- a/src/main/webapp/public/dashboard/home.scss
+++ b/src/main/webapp/public/dashboard/home.scss
@@ -1,3 +1,4 @@
+$image-height: 136px;
 
 .home-page{
   @extend .page-hero;
@@ -5,7 +6,7 @@
   &::after{
     content:"";
     width: 100%;
-    height: 136px;
+    height: $image-height;
     position: absolute;
     bottom: 0.5em;
     left: 0em;
