OLMIS-1215: Created  and -shadow variables to store black transparent RGBAs

--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -11,5 +11,7 @@ $medium-gray: #bbbbbb;
 $gray: #666666;
 $dark-gray: #333333;
 $black: #000000;
+$shadow: rgba($black, 0.75);
+$light-shadow: rgba($black, 0.075);
 
 $padding2px:2px;
