--- a/src/main/webapp/public/auth/login.scss
+++ b/src/main/webapp/public/auth/login.scss
@@ -48,7 +48,7 @@ body {
   }
   input:focus:required:invalid:focus {
     border-color: $heading-green;
-    box-shadow: inset 0 0.1em 0.1em rgba($black, 0.075), 0 0 0.5em rgba($cyan, 0.6);
+    box-shadow: inset 0 0.1em 0.1em $light-shadow, 0 0 0.5em rgba($cyan, 0.6);
   }
   input {
     &[type='text'], &[type='password'] {
@@ -68,28 +68,6 @@ body {
     font-size: 1em;
     text-decoration: underline;
   }
-}
-
-textarea:focus,
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-.uneditable-input:focus {
-  border-color: $heading-green;
-  outline: 0;
-  outline: thin dotted  \9;
-  box-shadow: inset 0 0.1em 0.1em rgba($black, 0.075), 0 0 0.5em rgba($cyan, 0.6);
 }
 
 .login-form {
