--- a/src/main/webapp/public/common/base.scss
+++ b/src/main/webapp/public/common/base.scss
@@ -83,7 +83,7 @@ input[type="color"]:focus,
   border-color: $heading-green;
   outline: 0;
   outline: thin dotted     \9;
-  box-shadow: inset 0 0.1em 0.1em rgba($black, 0.075), 0 0 0.5em rgba($cyan, 0.6);
+  box-shadow: inset 0 0.1em 0.1em $light-shadow, 0 0 0.5em rgba($cyan, 0.6);
 }
 
 .dropdown-menu li > a:hover,
