--- a/src/main/webapp/public/common/form-toolbar.scss
+++ b/src/main/webapp/public/common/form-toolbar.scss
@@ -11,7 +11,7 @@
 //Toolbar with buttons
 
 .action-buttons {
-  background: rgba($black, 0.7);
+  background: $shadow;
   position: fixed;
   bottom: 0;
   width: 100%;
