--- a/src/main/webapp/public/dashboard/header.scss
+++ b/src/main/webapp/public/dashboard/header.scss
@@ -1,7 +1,7 @@
 @import 'bourbon';
 
 body>header>:first-child {
-  box-shadow: 0 0 0.5em rgba($black, 0.6);
+  box-shadow: 0 0 0.5em $shadow;
   border-bottom: 0.1em solid lighten($cyan, 45%);
   color: $dark-gray;
   min-height: 4.7em;
