--- a/src/main/webapp/public/dashboard/navigation.scss
+++ b/src/main/webapp/public/dashboard/navigation.scss
@@ -87,7 +87,7 @@ header > .navbar {
 
   @include linear-gradient(to bottom, $heading-green 0%, darken($heading-green, 10%) 100%);
   margin-bottom: 0em;
-  box-shadow: 0.2em 0 0.4em rgba($black, 0.4);
+  box-shadow: 0.2em 0 0.4em $shadow;
   border-width: 0em;
   border-radius: 0em;
 
@@ -159,7 +159,7 @@ header > .navbar {
         color: $white;
         font-weight: bold;
         text-decoration: none;
-        text-shadow: 0.1em 0.1em 0.1em rgba($black, 0.4);
+        text-shadow: 0.1em 0.1em 0.1em $shadow;
         padding: 0.5em 1em;
         margin: 0.5em;
         &:hover,
@@ -172,7 +172,7 @@ header > .navbar {
       > a:hover {
         color: $white;
         background-color: darken($cyan, 25%);
-        box-shadow: inset 0.1em 0.1em 0.1em rgba($black, 0.2);
+        box-shadow: inset 0.1em 0.1em 0.1em $light-shadow;
         border-radius: 0.3em;
       }
     }
