OLMIS-1160: Got loading modal to work, and changed gif include to be css

--- a/src/main/webapp/public/dashboard/loading-modal.scss
+++ b/src/main/webapp/public/dashboard/loading-modal.scss
@@ -1,44 +1,14 @@
 .loading-modal {
-	.modal-body{
-		padding: 0px;
-	}
-	.modal-content {
-	  border-style: none
-	}
-}
+	.modal-dialog{
+    width: auto;
+  }
 
-.loading-modal ~ .modal-backdrop {
-  background-color: white;
-}
-
-.loading-modal ~ .modal-backdrop.in {
-  background-color: white;
-  opacity: 0.6;
-
-}
-
-.modal.fade .modal-dialog
-{
-    -moz-transition: none !important;
-    -o-transition: none !important;
-    -webkit-transition: none !important;
-    transition: none !important;
-
-    -moz-transform: none !important;
-    -ms-transform: none !important;
-    -o-transform: none !important;
-    -webkit-transform: none !important;
-    transform: none !important;
-}
-
-img[src="/public/images/loader.gif"] {
-  position: fixed;
-  background: white;
-  padding: 3px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  border:1px solid #aaa;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px #aaa;
+  .modal-content{
+    position: relative;
+    padding-left: 30px + $space-size*2; // 30px is width of loading-modal.gif
+    padding-right: $space-size;
+    background-image: url('dashboard/loading-modal.gif');
+    background-repeat: no-repeat;
+    background-position: $space-size center;
+  }
 }
