--- a/src/main/webapp/public/common/variables.scss
+++ b/src/main/webapp/public/common/variables.scss
@@ -14,4 +14,6 @@ $black: #000000;
 $shadow: rgba($black, 0.75);
 $light-shadow: rgba($black, 0.075);
 
+// Spacing
 $padding2px:2px;
+$space-size: 20px;
