OLMIS-494: remove role assignments table from user profile page

--- a/src/main/webapp/public/dashboard/profile.scss
+++ b/src/main/webapp/public/dashboard/profile.scss
@@ -1,25 +1,12 @@
 .profile {
 
+	input {
+		width: 20em;
+	}
+
 	.error-message {
 		@extend .alert;
 		@extend .alert-danger;
 		width: 100%;
-	}
-
-	table {
-		@extend .table;
-		@extend .table-bordered;
-
-		thead > tr {
-			@extend .gradient-header;
-
-			& > th {
-				min-width: 0 !important;
-			}
-		}
-
-		th, td {
-			vertical-align: middle !important;
-		}
 	}
 }
